<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/miHome"
        android:title="Home"
        android:icon="@drawable/ic_home" />

    <item android:id="@+id/miSearch"
        android:title="Search"
        android:icon="@drawable/ic_search" />

    <item android:id="@+id/textinput_placeholder"
        android:title=""/>

    <item android:id="@+id/miProfile"
        android:title="Profile"
        android:icon="@drawable/ic_person" />

    <item android:id="@+id/miSettings"
        android:title="Settings"
        android:icon="@drawable/ic_settings" />
</menu>