<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchImageActivity"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginVertical="30dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/etImageId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/coordinatorLayout2" />

    <Button
        android:id="@+id/getImage"
        style="@style/TEXT"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="120dp"
        android:text="Get Image"
        app:layout_constraintBottom_toBottomOf="@+id/coordinatorLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shareImage" />

    <EditText
        android:id="@+id/etImageId"
        style="@style/TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Type image name"
        app:layout_constraintBottom_toBottomOf="@+id/coordinatorLayout2"
        app:layout_constraintEnd_toEndOf="@+id/coordinatorLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/coordinatorLayout2" />

    <Button
        android:id="@+id/speakText"
        style="@style/TEXT"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:background="@drawable/ic_voice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/coordinatorLayout2"
        app:layout_constraintStart_toEndOf="@+id/etImageId"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/shareImage"
        style="@style/TEXT"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="Share Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etImageId" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteY="-16dp">


        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:fabCradleMargin="20dp"
            app:fabCradleRoundedCornerRadius="20dp"
            app:fabCradleVerticalOffset="10dp">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigationView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                app:menu="@menu/bottom_nav_menu" />

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            app:layout_anchor="@id/bottomAppBar" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>